[package]
name = "mrtjs2rtjs"
version = "0.1.0"
authors = ["Swift Navigation <dev@swiftnav.com>"]
edition = "2021"

[[bin]]
name = "mrtjs2rtjs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3" , features = ["derive"] }
rtcm = { path = "../rtcm", features = ["json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2", features = ["base64"] }
bytes = "1.2.0"
thiserror = "1"

[build-dependencies]
vergen = { version = "7", default-features = false, features = ["git"] }

[dev-dependencies]
deku = "0.13"
tempfile = "3"
